@@ -2,16 +2,23 @@ package com.example.demo.service.Impl;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.example.demo.exception.LovehomeNotFoundException;
+import com.example.demo.exception.UserNotFoundException;
 import com.example.demo.mapper.Mapper;
+import com.example.demo.model.dto.CatDto;
 import com.example.demo.model.dto.LovehomeDto;
+import com.example.demo.model.dto.ReportDto;
+import com.example.demo.model.entity.Cat;
 import com.example.demo.model.entity.Lovehome;
+import com.example.demo.model.entity.ReportList;
 import com.example.demo.repository.LovehomeRepository;
 import com.example.demo.service.LovehomeService;
 import com.example.demo.util.Imgur;
@@ -27,6 +34,7 @@ public class LovehomeServiceImpl implements LovehomeService {
 	
 	@Autowired
 	private Imgur imgur;
+	
 	
 	// 新增中途之家
 	@Override
@@ -62,7 +70,7 @@ public class LovehomeServiceImpl implements LovehomeService {
 		lovehomeRepository.save(lovehome);
 		return lovehome;
 	}
-
+	
 	@Override
 	public Lovehome updateLovehomeWithoutPhoto(Lovehome lovehome) {
 		Lovehome updatelovehome = lovehomeRepository.findById(lovehome.getLovehomeId())
@@ -74,7 +82,7 @@ public class LovehomeServiceImpl implements LovehomeService {
 		lovehomeRepository.save(updatelovehome);
 		return updatelovehome;
 	}
-
+	
 	@Override
 	public void deleteLovehomeById(Integer lovehomeId) {
 		Optional<Lovehome> lovehome = lovehomeRepository.findById(lovehomeId);
@@ -83,6 +91,28 @@ public class LovehomeServiceImpl implements LovehomeService {
 		}
 		lovehomeRepository.deleteById(lovehomeId);
 	}
+	
+	@Override
+	public LovehomeDto updateLovehome(LovehomeDto lovehomeDto, MultipartFile photoFile) {
+		Lovehome lovehome = objectMapper.toLovehomeEntity(lovehomeDto);
+		lovehome.setLovehome_Url(imgur.uploadImage(photoFile));
+		lovehomeRepository.save(lovehome);
+		return objectMapper.toLovehomeDto(lovehome);
+	}
+	
+	@Override
+	public LovehomeDto updateLovehomeWithoutPhoto(LovehomeDto lovehomeDto) {
+		Lovehome lovehome =  objectMapper.toLovehomeEntity(lovehomeDto);
+		Lovehome updatelovehome = lovehomeRepository.findById(lovehome.getLovehomeId())
+				.orElseThrow(() -> new LovehomeNotFoundException("找不到中途:lovehomeId" + lovehome.getLovehomeId()));
+		updatelovehome.setLovehomeName(lovehome.getLovehomeName());
+		updatelovehome.setLovehomeCity(lovehome.getLovehomeCity());
+		updatelovehome.setLovehomeDistrict(lovehome.getLovehomeDistrict());
+		updatelovehome.setLovehomeAddress(lovehome.getLovehomeAddress());
+		lovehomeRepository.save(updatelovehome);
+		return objectMapper.toLovehomeDto(updatelovehome);
+	}
+	
 
 	@Override
 	public List<LovehomeDto> getlovehomeCity(String lovehomeCity) {
@@ -100,18 +130,28 @@ public class LovehomeServiceImpl implements LovehomeService {
 				.collect(Collectors.toList());
 	}
 	
-/**
 	@Override
-	public List<LovehomeDto> searchLovehomeByName(String keyword) {
-		List<Lovehome> lovehome = lovehomeRepository.findByNameContaining(keyword);
-		if(lovehome.isEmpty()) {
-			throw new LovehomeNotFoundException("找不到中途:keyword" + keyword);
-		}
-		return lovehome.stream()
-				.map(objectMapper::toLovehomeDto)
-				.collect(Collectors.toList());
+	//查詢所有上傳的貓
+	public List<CatDto> getLovehomecatList(Integer lovehomeId){
+		Lovehome lovehome = lovehomeRepository.findById(lovehomeId).orElseThrow(() -> new UserNotFoundException());
+		List<Cat> cats = lovehome.getCats();
+		return cats.stream()
+					.map(cat ->objectMapper.toCatDto(cat))
+					.toList();
 	}
-*/
+	
+	@Override
+	// 查詢中途之家收到的通報清單
+	public List<ReportDto> getLovehomeReportList(Integer lovehomeId){
+		Lovehome lovehome = lovehomeRepository.findById(lovehomeId).orElseThrow(() -> new UserNotFoundException());
+		List<ReportList> reportLists = lovehome.getReportLists();
+		return reportLists.stream()
+						.map(report ->objectMapper.toReportListDto(report))
+						.toList();
+	}
+	
+	
 
+	
 
 }
